--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,11 +9,10 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  color: var(--foreground) !important;
+  background: var(--background) !important;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -25,12 +24,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 @font-face {
